
syntax = "proto2";

package google.protobuf.list;

option java_package = "com.google.protobuf.list";
option java_multiple_files = true;

message NestedMapDemo3 {
    map<int32, map<int32, int32>> metadata = 1;
}
